web to rostopic finished

--- a/strategy/package.xml
+++ b/strategy/package.xml
@@ -68,10 +68,10 @@
   <exec_depend>image_transport</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
